Started fixing flake.

--- a/pytest.ini
+++ b/pytest.ini
@@ -32,6 +32,7 @@ flake8-ignore =
     medusa/indexers/indexer_api.py D100 D101 D102 D105 N801
     medusa/indexers/indexer_config.py D100
     medusa/indexers/indexer_exceptions.py D400
+    medusa/indexers/indexer_base.py D100 D101 D102 D103 D105 D200 D202 D204 D205 D210 D400 D401 E711 N802 N803 N806
     medusa/indexers/tvdbv2/__init__.py D104
     medusa/indexers/tvdbv2/tvdbv2_api.py D100
     medusa/indexers/tvdbv2/tvdbv2_exceptions.py D200 D204 D205 D400 N801
