Flake fixes (combined).

--- a/pytest.ini
+++ b/pytest.ini
@@ -33,14 +33,16 @@ flake8-ignore =
     medusa/indexers/indexer_config.py D100
     medusa/indexers/indexer_exceptions.py D400
     medusa/indexers/indexer_base.py D100 D101 D102 D103 D105 D200 D202 D204 D205 D210 D400 D401 E711 N802 N803 N806
+    medusa/indexers/indexer_ui.py D100 D101 D102 D103 D105 D200 D202 D204 D205 D210 D400 D401 E711 N802 N803 N806
+    medusa/indexers/tmdb/__init__.py D104
+    medusa/indexers/tmdb/tmdb.py D100
+    medusa/indexers/tmdb/tmdb_exceptions.py D200 D204 D205 D400 N801
     medusa/indexers/tvdbv2/__init__.py D104
     medusa/indexers/tvdbv2/tvdbv2_api.py D100
     medusa/indexers/tvdbv2/tvdbv2_exceptions.py D200 D204 D205 D400 N801
-    medusa/indexers/tvdbv2/tvdbv2_ui.py D102 D103 D200 D204 D400
     medusa/indexers/tvmaze/__init__.py D104
     medusa/indexers/tvmaze/tvmaze_api.py D100 D101 D102 D103 D105 D200 D202 D204 D205 D210 D400 D401 E711 N802 N803 N806
     medusa/indexers/tvmaze/tvmaze_exceptions.py D200 D204 D205 D400 N801
-    medusa/indexers/tvmaze/tvmaze_ui.py D102 D103 D200 D204 D400
     medusa/media/banner.py D100 D102 D200 D400
     medusa/media/fan_art.py D100 D102 D200 D400
     medusa/media/generic.py D100 D101 D200 D202 D205 D400
