--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-norecursedirs = .build .cache .eggs .tox cache contrib htmlcov lib
+norecursedirs = .build .cache .eggs .tox cache contrib htmlcov lib venv
 python_files = *test*.py
 flake8-max-line-length = 160
 flake8-ignore =
