--- a/lib/guessit/test/rules/episodes.yml
+++ b/lib/guessit/test/rules/episodes.yml
@@ -76,7 +76,7 @@
 ? Some Series S01S02S03
 ? Some Series S01-02-03
 ? Some Series S01 S02 S03
-? -Some Series S01 02 03
+? Some Series S01 02 03
 : title: Some Series
   season: [1, 2, 3]
 
@@ -161,13 +161,14 @@
   type: episode
   video_codec: XviD
 
-? Show.Name.Season.1.3-5.HDTV.XviD-GoodGroup[SomeTrash]
-? Show.Name.Season.1.3~5.HDTV.XviD-GoodGroup[SomeTrash]
-? Show.Name.Season.1.3 to 5.HDTV.XviD-GoodGroup[SomeTrash]
+? Show.Name.Season.1.2.3-5.HDTV.XviD-GoodGroup[SomeTrash]
+? Show.Name.Season.1.2.3~5.HDTV.XviD-GoodGroup[SomeTrash]
+? Show.Name.Season.1.2.3 to 5.HDTV.XviD-GoodGroup[SomeTrash]
 : format: HDTV
   release_group: GoodGroup[SomeTrash]
   season:
   - 1
+  - 2
   - 3
   - 4
   - 5
