--- a/lib/guessit/test/movies.yml
+++ b/lib/guessit/test/movies.yml
@@ -845,3 +845,9 @@
   other: Mux
   screen_size: 720p
   type: movie
+
+? Secondary Education (2013).mkv
+: options: -T Second
+  title: Secondary Education
+  year: 2013
+  type: movie
